# Operating-Systems-labs

Marchenko_Elizaveta/lab2/: CMakeLists.txt  build.sh
Marchenko_Elizaveta/lab2/src/: config.hpp
Marchenko_Elizaveta/lab2/src/client/: ClientWindow.hpp  client.cpp  client.hpp
Marchenko_Elizaveta/lab2/src/conn_templates/: fifo_temp.hpp  mq_temp.hpp  seg_temp.hpp
Marchenko_Elizaveta/lab2/src/connections/: Connection.hpp  conn_fifo.cpp  conn_fifo.hpp  conn_mq.cpp  conn_mq.hpp  conn_seg.cpp  conn_seg.hpp
Marchenko_Elizaveta/lab2/src/host/: ClientConnection.hpp  HostWindow.hpp  host.cpp  host.hpp
